--- a/index.html
+++ b/index.html
@@ -71,14 +71,26 @@
             width: 90%;
             overflow-y: auto;
             background-color: #FEFDEE;
-            padding: 2rem;
-            min-height: 100%;
+            padding: 1rem;
+            height: 100%;
+            max-height: calc(100vh - 80px);
         }
         .project-content .page-content {
             display: block !important;
         }
         .project-content .active {
             display: block !important;
+        }
+        .project-content img[data-main-image] {
+            max-height: 400px;
+            object-fit: cover;
+        }
+        .project-content .grid {
+            height: 100%;
+        }
+        .project-content .flex.flex-col.justify-center {
+            height: 100%;
+            justify-content: space-between;
         }
         .circles-sidebar .portfolio-circle {
             position: relative;
@@ -237,14 +249,14 @@
 
         <!-- Project 1 Page -->
         <section id="project1" class="page-content">
-             <div class="w-full max-w-7xl mx-auto p-6 sm:p-8">
-                <button class="mb-6 flex items-center space-x-2 text-gray-600 hover:text-[#D9534F] transition-colors duration-300 nav-link" data-target="home">
+             <div class="w-full max-w-7xl mx-auto p-4">
+                <button class="mb-4 flex items-center space-x-2 text-gray-600 hover:text-[#D9534F] transition-colors duration-300 nav-link" data-target="home">
                     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path>
                     </svg>
                     <span>Back to Portfolio</span>
                 </button>
-                <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
+                <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
                     <div class="flex flex-col-reverse sm:flex-row gap-4">
                         <div class="flex sm:flex-col gap-3 overflow-x-auto sm:overflow-y-auto pr-2">
                             <img src="images/heel boot (8).png" alt="Thumbnail 1" class="thumbnail w-20 h-20 object-cover rounded-md active">
@@ -255,11 +267,11 @@
                         </div>
                     </div>
                     <div class="flex flex-col justify-center">
-                        <h1 class="text-4xl font-extrabold tracking-tight mb-2">Crimson Fibers</h1>
-                        <p class="text-lg text-gray-600 mb-4">Experimental 3D Printed Footwear</p>
-                        <p class="text-3xl font-bold mb-6">$350</p>
-                        <button class="w-full bg-black text-white py-3 rounded-lg font-semibold text-lg hover:bg-gray-800 transition-colors duration-300 mb-6">Contact for Purchase</button>
-                        <p class="text-gray-700 leading-relaxed">This piece explores the intersection of generative design and additive manufacturing...</p>
+                        <h1 class="text-3xl font-extrabold tracking-tight mb-2">Crimson Fibers</h1>
+                        <p class="text-base text-gray-600 mb-3">Experimental 3D Printed Footwear</p>
+                        <p class="text-2xl font-bold mb-4">$350</p>
+                        <button class="w-full bg-black text-white py-2 rounded-lg font-semibold hover:bg-gray-800 transition-colors duration-300 mb-4">Contact for Purchase</button>
+                        <p class="text-gray-700 leading-relaxed text-sm">This piece explores the intersection of generative design and additive manufacturing...</p>
                     </div>
                 </div>
             </div>
@@ -267,14 +279,14 @@
 
         <!-- Project 2 Page -->
         <section id="project2" class="page-content">
-             <div class="w-full max-w-7xl mx-auto p-6 sm:p-8">
-                <button class="mb-6 flex items-center space-x-2 text-gray-600 hover:text-[#D9534F] transition-colors duration-300 nav-link" data-target="home">
+             <div class="w-full max-w-7xl mx-auto p-4">
+                <button class="mb-4 flex items-center space-x-2 text-gray-600 hover:text-[#D9534F] transition-colors duration-300 nav-link" data-target="home">
                     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path>
                     </svg>
                     <span>Back to Portfolio</span>
                 </button>
-                <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
+                <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
                     <div class="flex flex-col-reverse sm:flex-row gap-4">
                         <div class="flex sm:flex-col gap-3 overflow-x-auto sm:overflow-y-auto pr-2">
                             <img src="images/MyShoeBoot Side View.png" alt="Thumbnail 1" class="thumbnail w-20 h-20 object-cover rounded-md active">
@@ -285,11 +297,11 @@
                         </div>
                     </div>
                     <div class="flex flex-col justify-center">
-                        <h1 class="text-4xl font-extrabold tracking-tight mb-2">Yellow Wave</h1>
-                        <p class="text-lg text-gray-600 mb-4">Digital Sculpture & Concept Art</p>
-                        <p class="text-3xl font-bold mb-6">$420</p>
-                        <button class="w-full bg-black text-white py-3 rounded-lg font-semibold text-lg hover:bg-gray-800 transition-colors duration-300 mb-6">Contact for Purchase</button>
-                        <p class="text-gray-700 leading-relaxed">'Yellow Wave' is a concept piece that blends fluid dynamics with solid form...</p>
+                        <h1 class="text-3xl font-extrabold tracking-tight mb-2">Yellow Wave</h1>
+                        <p class="text-base text-gray-600 mb-3">Digital Sculpture & Concept Art</p>
+                        <p class="text-2xl font-bold mb-4">$420</p>
+                        <button class="w-full bg-black text-white py-2 rounded-lg font-semibold hover:bg-gray-800 transition-colors duration-300 mb-4">Contact for Purchase</button>
+                        <p class="text-gray-700 leading-relaxed text-sm">'Yellow Wave' is a concept piece that blends fluid dynamics with solid form...</p>
                     </div>
                 </div>
             </div>
@@ -297,14 +309,14 @@
 
         <!-- Project 3 Page -->
         <section id="project3" class="page-content">
-            <div class="w-full max-w-7xl mx-auto p-6 sm:p-8">
-                <button class="mb-6 flex items-center space-x-2 text-gray-600 hover:text-[#D9534F] transition-colors duration-300 nav-link" data-target="home">
+            <div class="w-full max-w-7xl mx-auto p-4">
+                <button class="mb-4 flex items-center space-x-2 text-gray-600 hover:text-[#D9534F] transition-colors duration-300 nav-link" data-target="home">
                     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path>
                     </svg>
                     <span>Back to Portfolio</span>
                 </button>
-                <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
+                <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
                     <div class="flex flex-col-reverse sm:flex-row gap-4">
                         <div class="flex sm:flex-col gap-3 overflow-x-auto sm:overflow-y-auto pr-2">
                             <img src="images/TunsShoe Side View.png" alt="Thumbnail 1" class="thumbnail w-20 h-20 object-cover rounded-md active">
@@ -315,11 +327,11 @@
                         </div>
                     </div>
                     <div class="flex flex-col justify-center">
-                        <h1 class="text-4xl font-extrabold tracking-tight mb-2">Monochrome Strap</h1>
-                        <p class="text-lg text-gray-600 mb-4">A Study in Form and Function</p>
-                        <p class="text-3xl font-bold mb-6">$280</p>
-                        <button class="w-full bg-black text-white py-3 rounded-lg font-semibold text-lg hover:bg-gray-800 transition-colors duration-300 mb-6">Contact for Purchase</button>
-                        <p class="text-gray-700 leading-relaxed">This design focuses on minimalism and utility. The shoe is a single, continuous form...</p>
+                        <h1 class="text-3xl font-extrabold tracking-tight mb-2">Monochrome Strap</h1>
+                        <p class="text-base text-gray-600 mb-3">A Study in Form and Function</p>
+                        <p class="text-2xl font-bold mb-4">$280</p>
+                        <button class="w-full bg-black text-white py-2 rounded-lg font-semibold hover:bg-gray-800 transition-colors duration-300 mb-4">Contact for Purchase</button>
+                        <p class="text-gray-700 leading-relaxed text-sm">This design focuses on minimalism and utility. The shoe is a single, continuous form...</p>
                     </div>
                 </div>
             </div>
