--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             background-color: #FEFDEE;
             color: #333;
         }
+        main { padding-bottom: var(--marquee-h); }
         .nav-link {
             transition: color 0.3s ease;
             cursor: pointer;
@@ -24,6 +25,7 @@
             position: relative;
             width: 100%;
             height: 100%;
+            min-height: calc(100vh - 80px - var(--marquee-h));
             display: flex;
             justify-content: center;
             align-items: center;
@@ -41,6 +43,7 @@
             transition: transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), box-shadow 0.4s ease;
             cursor: pointer;
             will-change: transform;
+            z-index: 2;
             border: 4px solid #FEFDEE;
         }
         .page-content {
