--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clarence Keith - Portfolio</title>
+    <link rel="icon" type="image/png" href="images/Mehead.png">
+    <link rel="shortcut icon" type="image/png" href="images/Mehead.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         :root { --marquee-h: 48px; }
