Update top circle project to Sidian Shoes with okshoes images

--- a/index.html
+++ b/index.html
@@ -487,10 +487,10 @@
             const projectsConfig = [
                 {
                     id: 'project1',
-                    name: 'Crimson Fibers',
-                    tagline: 'Experimental 3D Printed Footwear',
+                    name: 'Sidian Shoes',
+                    tagline: 'OK Project Footwear Design',
                     date: 'Spring 2025',
-                    goal: 'This piece explores the intersection of generative design and additive manufacturing...',
+                    goal: 'This project explores innovative footwear design through experimental forms and materials...',
                     role: [
                         'Lead Designer',
                         '3D Modeling',
@@ -510,11 +510,14 @@
                         'Iterative testing improves final design',
                         'User feedback drives meaningful improvements'
                     ],
-                    circleImage: 'images/heel boot (8).png',
-                    mainImage: 'images/heel boot (8).png',
+                    circleImage: 'images/okshoes (1).jpg',
+                    mainImage: 'images/okshoes (1).jpg',
                     thumbnails: [
-                        { src: 'images/heel boot (8).png', alt: 'Main View' },
-                        { src: 'images/heel boot (1).png', alt: 'Alternative View' }
+                        { src: 'images/okshoes (1).jpg', alt: 'Main View' },
+                        { src: 'images/okshoes (2).jpg', alt: 'Side View' },
+                        { src: 'images/okshoes (3).jpg', alt: 'Detail View' },
+                        { src: 'images/okshoes (4).jpg', alt: 'Alternative Angle' },
+                        { src: 'images/okshoes (5).jpg', alt: 'Construction Detail' }
                     ]
                 },
                 {
