--- a/index.html
+++ b/index.html
@@ -514,10 +514,10 @@
                     mainImage: 'images/okshoes (1).jpg',
                     thumbnails: [
                         { src: 'images/okshoes (1).jpg', alt: 'Main View' },
-                        { src: 'images/okshoes (2).jpg', alt: 'Side View' },
-                        { src: 'images/okshoes (3).jpg', alt: 'Detail View' },
-                        { src: 'images/okshoes (4).jpg', alt: 'Alternative Angle' },
-                        { src: 'images/okshoes (5).jpg', alt: 'Construction Detail' }
+                        { src: 'images/okshoes (7).jpg', alt: 'Side View' },
+                        { src: 'images/okshoes (6).jpg', alt: 'Detail View' },
+                        { src: 'images/okshoes (1).mov', alt: 'Video' },
+                        { src: 'images/okshoes (3).jpg', alt: 'Alternative Angle' }
                     ]
                 },
                 {
