--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         }
         .project-content img[data-main-image] {
             max-height: 400px;
-            object-fit: cover;
+            object-fit: contain;
         }
         .project-content .grid {
             height: 100%;
