Update Sidian Shoes to use okshoes.png as circle image and first thumbnail

--- a/index.html
+++ b/index.html
@@ -510,10 +510,10 @@
                         'Iterative testing improves final design',
                         'User feedback drives meaningful improvements'
                     ],
-                    circleImage: 'images/okshoes (1).jpg',
-                    mainImage: 'images/okshoes (1).jpg',
+                    circleImage: 'images/okshoes.png',
+                    mainImage: 'images/okshoes.png',
                     thumbnails: [
-                        { src: 'images/okshoes (1).jpg', alt: 'Main View' },
+                        { src: 'images/okshoes.png', alt: 'Main View' },
                         { src: 'images/okshoes (7).jpg', alt: 'Side View' },
                         { src: 'images/okshoes (6).jpg', alt: 'Detail View' },
                         { src: 'images/okshoes (1).mov', alt: 'Video' },
