Update project titles: Footwear (top), Accessories (bottom left), Masks (bottom right)

--- a/index.html
+++ b/index.html
@@ -487,8 +487,8 @@
             const projectsConfig = [
                 {
                     id: 'project1',
-                    name: 'Sidian Shoes',
-                    tagline: 'OK Project Footwear Design',
+                    name: 'Footwear',
+                    tagline: 'Experimental Shoe Design',
                     date: 'Spring 2025',
                     goal: 'This project explores innovative footwear design through experimental forms and materials...',
                     role: [
@@ -522,8 +522,8 @@
                 },
                 {
                     id: 'project2',
-                    name: 'Yellow Wave',
-                    tagline: 'Digital Sculpture & Concept Art',
+                    name: 'Accessories',
+                    tagline: 'Design Objects & Accessories',
                     date: 'Fall 2024',
                     goal: "'Yellow Wave' is a concept piece that blends fluid dynamics with solid form...",
                     role: [
@@ -554,8 +554,8 @@
                 },
                 {
                     id: 'project3',
-                    name: 'Monochrome Strap',
-                    tagline: 'A Study in Form and Function',
+                    name: 'Masks',
+                    tagline: 'Experimental Face Coverings',
                     date: 'Winter 2024',
                     goal: 'This design focuses on minimalism and utility. The shoe is a single, continuous form...',
                     role: [
