Add heel boot sketches to Heel Boot Collection gallery

--- a/index.html
+++ b/index.html
@@ -542,7 +542,10 @@
                                 { src: 'images/heel boot (1).png', alt: 'Alternative View' },
                                 { src: 'images/heel boot (2).png', alt: 'Detail Shot' },
                                 { src: 'images/heel boot (3).png', alt: 'Side Profile' },
-                                { src: 'images/heel boot (4).png', alt: 'Construction Detail' }
+                                { src: 'images/heel boot (4).png', alt: 'Construction Detail' },
+                                { src: 'images/heel boot sketches (1).png', alt: 'Design Sketch 1' },
+                                { src: 'images/heel boot sketches (2).png', alt: 'Design Sketch 2' },
+                                { src: 'images/heel boot sketches (3).png', alt: 'Design Sketch 3' }
                             ]
                         },
                         {
