Add comprehensive accessory collections with proper images and descriptions

--- a/index.html
+++ b/index.html
@@ -659,33 +659,105 @@
                 {
                     id: 'project2',
                     name: 'Accessories',
-                    tagline: 'Design Objects & Accessories',
+                    tagline: 'Experimental Wearable Objects',
                     date: 'Fall 2024',
-                    goal: "'Yellow Wave' is a concept piece that blends fluid dynamics with solid form...",
+                    goal: 'A collection of experimental accessories exploring the intersection of form, function, and personal expression through wearable design objects.',
                     role: [
                         'Concept Development',
-                        '3D Sculpting',
+                        '3D Modeling & Sculpting',
+                        'Material Exploration',
                         'Visual Design',
-                        'Rendering'
+                        'Photography & Rendering'
                     ],
                     skills: [
                         '3D Sculpting',
-                        'Fluid Dynamics',
+                        'Jewelry Design',
                         'Concept Art',
                         'Digital Rendering',
                         'Form Exploration',
-                        'Visual Storytelling'
+                        'Visual Storytelling',
+                        'Photography',
+                        'Material Studies'
                     ],
                     lessons: [
-                        'Fluid forms require careful balance',
-                        'Color choice impacts emotional response',
-                        'Concept clarity drives execution'
+                        'Wearable objects require intimate understanding of human form',
+                        'Scale and proportion dramatically affect user experience',
+                        'Materials communicate beyond their physical properties'
                     ],
-                    circleImage: 'shoeimages/MyShoeBoot Side View.png',
-                    mainImage: 'shoeimages/MyShoeBoot Side View.png',
+                    circleImage: 'accessoryimages/buldgeglasses (1).jpg',
+                    mainImage: 'accessoryimages/buldgeglasses (1).jpg',
                     thumbnails: [
-                        { src: 'shoeimages/MyShoeBoot Side View.png', alt: 'Side View' },
-                        { src: 'shoeimages/MyShoeBoot Front  View.png', alt: 'Front View' }
+                        { src: 'accessoryimages/buldgeglasses (1).jpg', alt: 'Buldge Glasses' },
+                        { src: 'accessoryimages/golden eye (1).jpg', alt: 'Golden Eye' },
+                        { src: 'accessoryimages/hands glasses (1).jpg', alt: 'Hands Glasses' },
+                        { src: 'accessoryimages/idchain (1).jpg', alt: 'ID Chain' },
+                        { src: 'accessoryimages/liquidy glasses (1).jpg', alt: 'Liquidy Glasses' },
+                        { src: 'accessoryimages/silvernecklace (1).jpg', alt: 'Silver Necklace' }
+                    ],
+                    projects: [
+                        {
+                            name: 'Buldge Glasses',
+                            description: 'Experimental eyewear exploring organic forms and unconventional proportions. These glasses challenge traditional notions of functionality while maintaining wearability.',
+                            images: [
+                                { src: 'accessoryimages/buldgeglasses (1).jpg', alt: 'Front View' },
+                                { src: 'accessoryimages/buldgeglasses (2).jpg', alt: 'Side Profile' },
+                                { src: 'accessoryimages/buldgeglasses (3).jpg', alt: 'Detail Shot' }
+                            ]
+                        },
+                        {
+                            name: 'Golden Eye',
+                            description: 'A sculptural piece that blurs the line between jewelry and art object. The golden eye motif explores themes of perception and identity.',
+                            images: [
+                                { src: 'accessoryimages/golden eye (1).jpg', alt: 'Main View' },
+                                { src: 'accessoryimages/golden eye (2).jpg', alt: 'Detail' },
+                                { src: 'accessoryimages/golden eye (3).jpg', alt: 'Alternative Angle' },
+                                { src: 'accessoryimages/golden eye (4).jpg', alt: 'Close-up' }
+                            ]
+                        },
+                        {
+                            name: 'Hands Glasses',
+                            description: 'Conceptual eyewear featuring hand motifs that explore themes of touch, vision, and human connection through wearable design.',
+                            images: [
+                                { src: 'accessoryimages/hands glasses (1).jpg', alt: 'Front View' },
+                                { src: 'accessoryimages/hands glasses (2).jpg', alt: 'Side View' },
+                                { src: 'accessoryimages/hands glasses (3).jpg', alt: 'Detail' },
+                                { src: 'accessoryimages/hands glasses (4).jpg', alt: 'Alternative Angle' }
+                            ]
+                        },
+                        {
+                            name: 'ID Chain',
+                            description: 'A comprehensive collection of chain designs exploring different textures, weights, and forms. Each piece represents a different aspect of personal identity.',
+                            images: [
+                                { src: 'accessoryimages/idchain (1).jpg', alt: 'Chain 1' },
+                                { src: 'accessoryimages/idchain (2).jpg', alt: 'Chain 2' },
+                                { src: 'accessoryimages/idchain (3).jpg', alt: 'Chain 3' },
+                                { src: 'accessoryimages/idchain (4).jpg', alt: 'Chain 4' },
+                                { src: 'accessoryimages/idchain (5).jpg', alt: 'Chain 5' },
+                                { src: 'accessoryimages/idchain (6).jpg', alt: 'Chain 6' },
+                                { src: 'accessoryimages/idchain (7).jpg', alt: 'Chain 7' },
+                                { src: 'accessoryimages/idchain (8).jpg', alt: 'Chain 8' },
+                                { src: 'accessoryimages/idchain (9).jpg', alt: 'Chain 9' }
+                            ]
+                        },
+                        {
+                            name: 'Liquidy Glasses',
+                            description: 'Fluid-inspired eyewear that captures the essence of movement and transformation. These glasses explore the relationship between solid form and liquid motion.',
+                            images: [
+                                { src: 'accessoryimages/liquidy glasses (1).jpg', alt: 'Main View' },
+                                { src: 'accessoryimages/liquidy glasses (2).jpg', alt: 'Side View' },
+                                { src: 'accessoryimages/liquidy glasses (3).jpg', alt: 'Detail' }
+                            ]
+                        },
+                        {
+                            name: 'Silver Necklace',
+                            description: 'Elegant silver necklace designs that balance minimalism with statement-making presence. Each piece explores different approaches to form and texture.',
+                            images: [
+                                { src: 'accessoryimages/silvernecklace (1).jpg', alt: 'Necklace 1' },
+                                { src: 'accessoryimages/silvernecklace (2).jpg', alt: 'Necklace 2' },
+                                { src: 'accessoryimages/silvernecklace (3).jpg', alt: 'Necklace 3' },
+                                { src: 'accessoryimages/silvernecklace (4).jpg', alt: 'Necklace 4' }
+                            ]
+                        }
                     ]
                 },
                 {
