--- a/index.html
+++ b/index.html
@@ -1356,7 +1356,7 @@
                 
                 const description1 = document.createElement('p');
                 description1.className = 'text-white leading-relaxed mb-4';
-                description1.textContent = "I'm Clarence Keith, a passionate footwear designer and 3D artist specializing in experimental design and additive manufacturing. My work explores the intersection of traditional craftsmanship and cutting-edge technology.";
+                description1.textContent = "I'm Clarence Keith, a passionate footwear biggie smalls and 3D artist specializing in experimental design and additive manufacturing. My work explores the intersection of traditional craftsmanship and cutting-edge technology.";
                 
                 const description2 = document.createElement('p');
                 description2.className = 'text-white leading-relaxed mb-4';
