--- a/index.html
+++ b/index.html
@@ -1453,7 +1453,7 @@
                 
                 const profileTitle = document.createElement('p');
                 profileTitle.className = 'text-lg opacity-90 text-white';
-                profileTitle.textContent = 'designer';
+                profileTitle.textContent = 'kkk';
                 
                 profileIcon.appendChild(profileImg);
                 profileContent.appendChild(profileIcon);
